--- a/plugin/notes/speaker-view.html
+++ b/plugin/notes/speaker-view.html
@@ -350,9 +350,7 @@
 					layoutDropdown,
 					pendingCalls = {},
 					lastRevealApiCallId = 0,
-					connected = false
-
-				var connectionStatus = document.querySelector( '#connection-status' );
+					connected = false;
 
 				var SPEAKER_LAYOUTS = {
 					'default': 'Default',
@@ -363,25 +361,17 @@
 
 				setupLayout();
 
-				let openerOrigin;
-
-				try {
-					openerOrigin = window.opener.location.origin;
-				}
-				catch ( error ) { console.warn( error ) }
-
-				// In order to prevent XSS, the speaker view will only run if its
-				// opener has the same origin as itself
-				if( window.location.origin !== openerOrigin ) {
-					connectionStatus.innerHTML = 'Cross origin error.<br>The speaker window can only be opened from the same origin.';
-					return;
-				}
-
+				var connectionStatus = document.querySelector( '#connection-status' );
 				var connectionTimeout = setTimeout( function() {
 					connectionStatus.innerHTML = 'Error connecting to main window.<br>Please try closing and reopening the speaker view.';
 				}, 5000 );
 
 				window.addEventListener( 'message', function( event ) {
+
+					// Ignore post messages from other origins to prevent XSS
+					if( window.location.origin !== event.origin ){
+						return;
+					}
 
 					clearTimeout( connectionTimeout );
 					connectionStatus.style.display = 'none';
@@ -533,8 +523,8 @@
 
 					var urlSeparator = /\?/.test(data.url) ? '&' : '?';
 					var hash = '#/' + data.state.indexh + '/' + data.state.indexv;
-					var currentURL = data.url + urlSeparator + params + '&scrollActivationWidth=false&postMessageEvents=true' + hash;
-					var upcomingURL = data.url + urlSeparator + params + '&scrollActivationWidth=false&controls=false' + hash;
+					var currentURL = data.url + urlSeparator + params + '&postMessageEvents=true' + hash;
+					var upcomingURL = data.url + urlSeparator + params + '&controls=false' + hash;
 
 					currentSlide = document.createElement( 'iframe' );
 					currentSlide.setAttribute( 'width', 1280 );
